# nomad-agent

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
nomad/: __init__.py  config.py  main.py
nomad/core/: agent.py  context.py  offline.py
nomad/memory/: store.py
nomad/models/: cache.py  router.py
nomad/tools/: __init__.py  registry.py
nomad/tools/builtins/: __init__.py  code_exec.py  file_ops.py  terminal.py  web.py
