[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nomad-agent"
version = "0.1.0"
description = "Mobile-first AI agent OS — battery-aware, offline-first, privacy-sovereign."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Ash" }]
keywords = ["ai", "agent", "mobile", "android", "termux", "offline", "privacy"]

dependencies = [
    "httpx>=0.27,<1",
    "rich>=13,<14",
    "click>=8,<9",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.5,<1"]

[project.scripts]
nomad = "nomad.main:cli"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
